third_party/WebKit/LayoutTests/http/tests/cookies/resources/setUtf8Cookies-result.php
@@ -1,0 +1,17 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+<?php header('Content-Type: text/html; charset=UTF-8'); ?>
+<html>
+<body>
+<p>
+<?php
+    echo "<p>some utf8 characters: UTF-8 æøå 中国</p>";
+    echo "<p>php_cookie: ".$_COOKIE["php_cookie"]."</p>";
+?>
+<script>
+    if (window.layoutTestController)
+        layoutTestController.dumpAsText();
+    document.cookie="js_cookie=UTF-8 æøå 中国; expires=Monday, 04-Apr-2020 05:00:00 GMT";
+    document.write("cookies read through js: "+document.cookie);
+</script>
+</body>
+</html>
